Amarok ChangeLog
================
(C) 2002-2011 the Amarok authors.

Version 2.6-Beta 1
  FEATURES:
    * Albums with same name but different album artist are now correctly
      separated in USB Mass Storage, iPod and various online service collections.
    * Support for detecting compilations in USB Mass Storage collection.
    * Support embedded covers for ogg (read only) and flac files. (BR 288752)
    * Track meta-data can be edited in USB Mass Storage collection.
    * Support for album artists in USB Mass Storage collection.
    * album artist (if differs from artist), BPM, labels, last played time and
      bitrate are now shown in playlist track tooltip (if not already displayed
      in playlist)
    * Volume normalization: ReplayGain is now converted to iPod Sound Check and
      vice versa. (BR 142579)

  CHANGES:
    * Album artist is now guessed for tracks that do not belong into any
      collection and tracks from USB Mass Storage collection. Guessing uses the
      same algorithm as Local Collection.
    * libgpod requirement raised from 0.7.0 to 0.7.93 for better maintainability.
    * When hovering iPod, UMS or MTP collection in collection browser,
      "1.2 GB free" is shown instead of "85% used"; thicker capacity bar.

  BUGFIXES:
    * Fix crashes with Bookmarks (BR 283753) thanks to Charles Reiss
    * Fix memory leaks in USB Mass Storage collection where track objects were
      never freed due to circular references.
    * Fix rare APG solver crash. (BR 290533)
    * Compilations are handled more consistently on iPods. (BR 232072)

Version 2.5
  FEATURES:
    * Now It's possible to use formated strings for prefix and suffix in 
      Playlist's layout items.

  BUGFIXES:
    * Do not crash when iPod doesn't have a master playlist. (BR 288936)
    * Fix Last.fm not finding KDE Wallet. (BR 286741)
    * Put a border around bottom toolbars, visually separating them from
      browser contents. (BR 277741)
    * Align the bottom toolbars.